## 5.5.2

- Improved: 2-ring support for 24H clock in daily random time selection

## 5.5.1

- New: option for sliding transition between settings pages and workaround for bug with blank settings subpages in help dialog
- Improved: syncing of wallpaper design preferences when wallpaper is active
- Improved: random wallpaper design options
- Improved: custom color selection for extracted colors
- Improved: disabled auto backup of settings through Google Drive because different devices require different configurations
- Fixed: changed random wallpaper design when toggling dark mode and after device restart
- Fixed: internal cleanup of wallpaper engine and a few potential crash fixes
- Fixed: bug in language selection caused by duplicated code

## 5.5.0

- New: complex shape intersecting for a new colorful wallpaper based on another artwork by Anna Kövecses
- New: option for a daily random wallpaper design
- New: workaround for Samsung's unfavorable implementation of dynamic colors on Android 12+ (appearance section)
- New: system app language selection on Android 13
- New: custom color selection for wallpaper colors
- New: Japanese translation
- New: themed app icon on Android 13
- Improved: toggle logic for launcher text color
- Improved: refreshed toggle switch style in settings
- Improved: changelog style and help/license text appearance
- Improved: changed method for haptic effects in settings app
- Fixed: selection for random design option not stored

## 5.4.0

- New: wallpaper with Android 12 setup design of Pixel 6
- New: yellow and turquoise app color themes
- New: Czech and Lithuanian translations
- New: privacy policy link in about section
- Improved: new help dialog accessible from top right menus and overview screen
- Improved: simplified night mode option in appearance settings
- Improved: app layout and dialog appearance on large screens
- Improved: workaround for MIUI issue replaced by info in help dialog, since workaround didn't work